--- a/menu.html
+++ b/menu.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>เมนูหลัก</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
 
-    <style>
-    .menu .full {
-    grid-column: span 2;   /* กิน 2 คอลัมน์ */
-    justify-self: center;  /* จัดให้อยู่กลาง */
-    width: 70%;            /* ความกว้างกำลังสวย */
+<style>
+* {
+    box-sizing: border-box;
 }
 
-    .bg-shape {
+body {
+    margin: 0;
+    font-family: 'Kanit', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(circle at top left, #1a2a6c, #16222a 40%, #0f2027 70%);
+    color: white;
+    padding: 20px;
+    position: relative;
+    overflow-x: hidden;
+}
+
+/* วงแสงพื้นหลัง */
+.bg-shape {
     position: absolute;
-    width: 400px;
-    height: 400px;
-    background: linear-gradient(135deg, #00c6ff, #0072ff);
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
     filter: blur(120px);
-    opacity: 0.6;
+    opacity: 0.5;
+    z-index: 0;
 }
 
 .bg1 {
     top: -100px;
     left: -100px;
+    background: linear-gradient(135deg, #00c6ff, #0072ff);
 }
 
 .bg2 {
@@ -32,110 +47,128 @@
     right: -120px;
     background: linear-gradient(135deg, #ff512f, #dd2476);
 }
-        body {
-    margin: 0;
-    font-family: 'Kanit', sans-serif;
-    background: radial-gradient(circle at top left, #1a2a6c, #16222a 40%, #0f2027 70%);
-    color: #fff;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
 
-        .container {
+/* กล่องหลัก */
+.container {
     position: relative;
-    background: rgba(255, 255, 255, 0.12);
+    z-index: 1;
+    width: 100%;
+    max-width: 420px;
+    background: rgba(255,255,255,0.1);
     backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
-    padding: 40px;
+    padding: 35px 25px;
     border-radius: 25px;
     text-align: center;
-    width: 90%;
-    max-width: 600px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
-    z-index: 1;
-}
-        h1 {
-            margin-bottom: 30px;
-        }
-
-        .menu {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-        }
-
-       .menu a {
-    padding: 25px;
-    background: linear-gradient(135deg, #00c6ff, #0072ff);
-    color: #fff;
-    text-decoration: none;
-    border-radius: 18px;
-    font-size: 1.2rem;
-    transition: transform 0.25s, box-shadow 0.25s;
-    box-shadow: 0 0 15px rgba(0, 198, 255, 0.4);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.5);
 }
 
-.menu a:hover {
-    transform: translateY(-6px) scale(1.03);
-    box-shadow: 0 0 30px rgba(0, 198, 255, 0.8);
-}
-        .menu a:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.4);
-        }
-
-        .back {
-            margin-top: 30px;
-            display: inline-block;
-            color: #fff;
-            text-decoration: underline;
-        }
-        @keyframes gradientMove {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+/* หัวข้อ */
+h1 {
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
+/* เมนู */
+.menu {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+    align-items: end;
+}
 
+/* ปุ่มพร้อมรูป */
 .image-button {
     position: relative;
-    display: inline-block;
-    margin: 40px 20px;
     text-align: center;
+    transition: 0.3s;
+}
+.btn-image {
+    position: absolute;
+    width: 70px;
+    top: -45px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: 0.3s;
 }
 
 .main-btn {
     display: inline-block;
-     width: 200px;          /* 👈 เพิ่มบรรทัดนี้ */
-    padding: 12px 0;       /* ปรับ padding */
-    background: #2f80ed;
+    width: 100%;
+    padding: 15px 0;
+    background: linear-gradient(135deg, #00c6ff, #0072ff);
     color: white;
     text-decoration: none;
-    border-radius: 25px;
+    border-radius: 20px;
     font-size: 18px;
-    position: relative;
-    z-index: 1;
+    transition: 0.3s;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+}
+
+.image-button:hover .btn-image {
+    transform: translate(-50%, -8px);
+}
+
+.image-button:hover {
+    transform: translateY(-8px) scale(1.03);
+}
+
+/* ปุ่มล่าง */
+.full {
+    grid-column: span 2;
+    justify-self: center;
+    width: 70%;
+    padding: 15px;
+    background: linear-gradient(135deg, #2f80ed, #1c5ed6);
+    border-radius: 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
     transition: 0.3s;
 }
 
-.btn-image {
-    position: absolute;
-    width: 80px;
-    top: -60px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    transition: 0.3s;
+.full:hover {
+    transform: translateY(-8px) scale(1.03);
 }
-.image-button:hover .btn-image {
-    transform: translate(-50%, -10px);
+/* ปุ่มกลับ */
+.back {
+    margin-top: 25px;
+    display: inline-block;
+    color: #ddd;
+    text-decoration: none;
 }
-.image-button:hover .main-btn {
-    transform: scale(1.05);
+
+.back:hover {
+    text-decoration: underline;
 }
-    </style>
+
+/* มือถือ */
+@media (max-width: 480px) {
+    h1 {
+        font-size: 22px;
+    }
+
+    .btn-image {
+        width: 60px;
+        top: -40px;
+    }
+
+    .main-btn, .full {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 600px) {
+    .menu {
+        grid-template-columns: 1fr;
+    }
+
+    .full {
+        grid-column: span 1;
+        width: 100%;
+    }
+}
+</style>
     
 </head>
 <body>
